test/type-check/should-fail/and.bril
main{

    v1: bool = const true;
    v2: bool = const 2;
    v3: bool = and v1 v2;
    print v3;

}

